overflow fix

--- a/about.css
+++ b/about.css
@@ -68,8 +68,8 @@ footer{
     overflow: hidden;
 }
 #cont_footer{
-    position: absolute;
-    bottom: -1;
+    position: fixed;
+    bottom: 0;
     width: 100%;
     height: 4vh;
     background-color: #0A0A0A;
